# hexmovr_moto_manager

./: .gitignore  README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/hexmovr_bridge/lib/hexmovr_bridge/: hexmovr_bridge
install/hexmovr_bridge/share/hexmovr_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hexmovr_moto_manager/lib/hexmovr_moto_manager/: moto_scaner
install/hexmovr_moto_manager/share/hexmovr_moto_manager/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hexmovr_moto_manager/share/hexmovr_moto_manager/launch/: hexmovr_manager.launch.py  hexmovr_manager_headless.launch.py
install/hexmovr_moto_manager/share/hexmovr_moto_manager/rviz/: hexmovr_manager.rviz
install/hexmovr_moto_panel/include/hexmovr_moto_panel/: hexmovr_panel.hpp
install/hexmovr_moto_panel/share/ament_index/resource_index/package_run_dependencies/: hexmovr_moto_panel
install/hexmovr_moto_panel/share/ament_index/resource_index/parent_prefix_path/: hexmovr_moto_panel
install/hexmovr_moto_panel/share/ament_index/resource_index/rviz_common__pluginlib__plugin/: hexmovr_moto_panel
install/hexmovr_moto_panel/share/hexmovr_moto_panel/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  plugin_description.xml
install/hexmovr_moto_panel/share/hexmovr_moto_panel/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  hexmovr_moto_panelConfig-version.cmake  hexmovr_moto_panelConfig.cmake  hexmovr_moto_panelExport-noconfig.cmake  hexmovr_moto_panelExport.cmake
install/hexmovr_moto_panel/share/hexmovr_moto_panel/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/hexmovr_moto_panel/share/hexmovr_moto_panel/meshes/: moto.STL
install/hexmovr_motor_example/lib/hexmovr_motor_example/: motor_demo  motor_direct_library
install/hexmovr_motor_example/share/hexmovr_motor_example/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hexmovr_motor_example/share/hexmovr_motor_example/launch/: motor_demo.launch.py  motor_direct_library.launch.py
install/my_python_pkg/lib/my_python_pkg/: my_node
install/my_python_pkg/share/my_python_pkg/: package.sh  package.xml
log/: latest_build
src/hexmovr_bridge/: package.xml  setup.cfg  setup.py
src/hexmovr_bridge/config/: hexmovr_motors.example.yaml
src/hexmovr_bridge/docs/: python_sdk.md
src/hexmovr_bridge/hexmovr_bridge/: bus.py  config.py  motor.py  node.py  protocol.py
src/hexmovr_bridge/test/: test_config.py  test_protocol.py
src/hexmovr_moto_manager/: package.xml  setup.cfg  setup.py
src/hexmovr_moto_manager/hexmovr_moto_manager/: can_transport.py  hexmovr_client.py  hexmovr_protocol.py  moto_scaner.py
src/hexmovr_moto_manager/launch/: hexmovr_manager.launch.py  hexmovr_manager_headless.launch.py
src/hexmovr_moto_manager/rviz/: hexmovr_manager.rviz
src/hexmovr_moto_manager/scripts/: moto_scaner
src/hexmovr_moto_manager/test/: test_client_bridge_protocol.py
src/hexmovr_moto_panel/: CMakeLists.txt
src/hexmovr_moto_panel/include/hexmovr_moto_panel/: hexmovr_panel.hpp
src/hexmovr_moto_panel/src/: hexmovr_panel.cpp
src/hexmovr_motor_example/: README.md  package.xml  setup.cfg  setup.py
src/hexmovr_motor_example/hexmovr_motor_example/: __init__.py  motor_demo.py  motor_direct_library.py
src/hexmovr_motor_example/launch/: motor_demo.launch.py  motor_direct_library.launch.py
src/hexmovr_ros2_control/: CMakeLists.txt  README.md  package.xml
src/hexmovr_ros2_control/config/: example.ros2_control.yaml
src/hexmovr_ros2_control/doc/: design.md
src/hexmovr_ros2_control/include/hexmovr_ros2_control/: hexmovr_system.hpp.todo
src/hexmovr_ros2_control/src/: hexmovr_system.cpp.todo
