<?xml version="1.0"?>
<package format="3">
  <name>hexmovr_bridge</name>
  <version>0.1.0</version>
  <description>Pure Python ROS2 bridge for Hexmovr motors over SocketCAN.</description>
  <maintainer email="energetic2021@gmail.com">hexmovr02</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-can</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
